--- a/help.html
+++ b/help.html
@@ -25,7 +25,7 @@
     </nav>
     <header>
         <article class="center text">
-            <p>В случае, если у Вас есть какие-то вопросы по проекту, Вы хотели бы оставить отзыв или предложить сотрудничество, Вы всегда можете написать на нашу почту: help@borschevik@bizml.ru.</p>
+            <p>В случае, если у Вас есть какие-то вопросы по проекту, Вы хотели бы оставить отзыв или предложить сотрудничество, Вы всегда можете написать на нашу почту: <a href="mailto:help@borschevik.bizml.ru"> help@borschevik.bizml.ru</a></p>
             <p>Также Вы можете написать в сообщения нашей <a href="http://vk.com/history_borshevik">группы ВКонтакте</a> или связаться с её администраторами.</p>
             <p>Спасибо, что посещаете наш сайт!</p>
         </article>
