--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <a href="articles/buharin.html"><img src="images/articles/buharin.jpg" alt="Бухарин" class="article_pic"></a>
                         </section> 
                     </section>
-                    <h3 class="text center">Биография Николай Бухарина</h3>
+                    <h3 class="text center">Биография Николаяs Бухарина</h3>
                 </figure>
             
             <li>
@@ -127,7 +127,7 @@
                     <section class="interact">
                         <p class="center type">Интерактив</p>
                         <section class="pic">
-                            <a href="converter/Converter.php"><img src="images/articles/converter.jpg" alt="Конвертер дат" class="article_pic"></a>
+                            <a href="converter/converter.php"><img src="images/articles/converter.jpg" alt="Конвертер дат" class="article_pic"></a>
                         </section>
                     </section>
                     <h3 class="text center">Приложение для запоминания дат</h3>
