--- a/snake/rules.html
+++ b/snake/rules.html
@@ -20,9 +20,9 @@
 
     <li>Чтобы начать игру нажмите кнопку "СТАРТ"</li>
 
-    <li>Управление змейкой осуществляется посредством клавиш WASD или стрелочек</li>
+    <li>Управление змейкой осуществляется посредством клавиш WASD или стрелочек. Для старта игры нажмите клавишу Enter</li>
 
-    <li>Правила очень похожи на классическую змейку: вам нужно передвигаться по полю и есть яблоки, и при этом не врезаться в стенки и в свой хвост. Однако есть одно существенное отличие. Когда вы пытаетесь съесть яблоко вам предлогается ответить на исторический вопрос. Если вы отвечаете правильно - считайте что вы съели яблоко и продолжайте играть. В противном же случае вам будет показано соответствующее сообщение и правильный ответ, который вам нужно будет скопировать в поле ввода. Змейка запомнит, что ответа на этот вопрос вы не знали и задаст вам его снова в скором времени.</li>
+    <li>Правила очень похожи на классическую змейку: вам нужно передвигаться по полю и есть яблоки, и при этом не врезаться в стенки и в свой хвост. Однако есть одно существенное отличие. Когда вы пытаетесь съесть яблоко вам предлагается ответить на исторический вопрос. Если вы отвечаете правильно - считайте что вы съели яблоко и продолжайте играть. В противном же случае вам будет показано соответствующее сообщение и правильный ответ, который вам нужно будет скопировать в поле ввода. Змейка запомнит, что ответа на этот вопрос вы не знали и задаст вам его снова в скором времени.</li>
 
     <li>Вы можете победить только если ответите на все вопросы правильно</li>
 
