--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <a href="articles/buharin.html"><img src="images/articles/buharin.jpg" alt="Бухарин" class="article_pic"></a>
                         </section> 
                     </section>
-                    <h3 class="text center">Биография Николаяs Бухарина</h3>
+                    <h3 class="text center">Биография Николая Бухарина</h3>
                 </figure>
             
             <li>
